fix: actions menu and build animation overflow bug (#493)

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -327,6 +327,7 @@ details.build-toggle {
   position: absolute;
   top: 0.75rem;
   right: 0.25rem;
+  z-index: 9999;
 
   width: max-content;
   min-width: 100%;
@@ -421,7 +422,6 @@ details.build-toggle {
 .build-container {
   width: 100%;
   margin: 12px 0;
-  overflow: hidden;
 }
 
 .build-preview-error {
@@ -612,6 +612,10 @@ details.build-toggle {
   position: absolute;
 
   width: 100%;
+  height: 100%;
+  overflow-x: clip;
+
+  pointer-events: none;
 }
 
 .-running-start {
